# AMD_OpenMP_Exercises

./: README.md
2a-OpenMP_overview/: Compiling_OpenMP_in_C.ipynb  Compiling_OpenMP_in_Fortran.ipynb
2a-OpenMP_overview/C/: CMakeLists.txt  Makefile
2a-OpenMP_overview/Fortran/: CMakeLists.txt  Makefile
2b-OpenMP_single_line_constructs/: Single_line_constructs_in_C.ipynb  Single_line_constructs_in_Fortran.ipynb
2b-OpenMP_single_line_constructs/C/: saxpy_cpu.c  saxpy_gpu_collapse.c  saxpy_gpu_loop.c  saxpy_gpu_parallelfor.c  saxpy_gpu_singleunit_autoalloc.c  saxpy_gpu_singleunit_dynamic.c
2b-OpenMP_single_line_constructs/Fortran/: Makefile  saxpy_cpu.F90  saxpy_gpu_collapse.F90  saxpy_gpu_loop.F90  saxpy_gpu_paralleldo.F90  saxpy_gpu_singleunit_autoalloc.F90  saxpy_gpu_singleunit_dynamic.F90
2c-OpenMP_complex_constructs/: Complex_compute_constructs_in_C.ipynb  Complex_compute_constructs_in_Fortran.ipynb
2c-OpenMP_complex_constructs/C/: Makefile  saxpy_gpu_collapse.c  saxpy_gpu_parallelfor.c  saxpy_gpu_split_level.c  saxpy_gpu_target.c  saxpy_gpu_target_parallel_for.c  saxpy_gpu_target_teams.c  saxpy_gpu_target_teams_distribute.c
2c-OpenMP_complex_constructs/Fortran/: Makefile  saxpy_gpu_target_parallel_do.F90
2d-OpenMP_explicit_memory_directive/: Explicit_memory_management_in_C.ipynb  Explicit_memory_management_in_Fortran.ipynb
2d-OpenMP_explicit_memory_directive/C/: CMakeLists.txt  Makefile  mem1.cc  mem2.cc  mem3.cc  mem4.cc  mem5.cc  target_data_update.cpp
2d-OpenMP_explicit_memory_directive/Fortran/: CMakeLists.txt  Makefile
2e-OpenMP_managed_memory/: Managed_memory_in_C.ipynb  Managed_memory_in_Fortran.ipynb
2e-OpenMP_managed_memory/C/: CMakeLists.txt  mem10.cc  mem7.cc  mem8.cc  mem9.cc
2e-OpenMP_managed_memory/Fortran/: CMakeLists.txt
2f-OpenMP_reductions_atomics_mutexes/: Reductions_atomics_and_mutexes_in_C.ipynb  Reductions_atomics_and_mutexes_in_Fortran.ipynb
2f-OpenMP_reductions_atomics_mutexes/C/: Makefile  atomic.c  reduction_array.c
2f-OpenMP_reductions_atomics_mutexes/Fortran/: Makefile  reduction_scalar.F
2g-OpenMP_device_subroutines/: Device_subroutines_in_C.ipynb  Device_subroutines_in_CXX.ipynb  Device_subroutines_in_Fortran.ipynb
2h-OpenMP_Optimisation/: Optimisation_in_C.ipynb  Optimisation_in_Fortran.ipynb
2h-OpenMP_Optimisation/C/3_memorypool/: memorypool.cpp
2h-OpenMP_Optimisation/C/alignment/: Makefile  align_two_kernels.cc
2h-OpenMP_Optimisation/C/kernel_pragmas/: CMakeLists.txt  kernel1.cc  kernel2.cc  kernel3.cc
2i-OpenMP_HIP_interportability/: OpenMP_interoperability_with_HIP_C.ipynb  OpenMP_interoperability_with_HIP_Fortan.ipynb
2i-OpenMP_HIP_interportability/C/: Makefile
(+14 files in other folders)
